projects/batfish/src/test/resources/org/batfish/representation/aws/test-transit-gateway-peering/aws_configs/accounts/732168539940/us-east-1/Reservations.json
{
  "Reservations": [
    {
      "Groups": [],
      "Instances": [
        {
          "AmiLaunchIndex": 0,
          "Architecture": "x86_64",
          "BlockDeviceMappings": [
            {
              "DeviceName": "/dev/xvda",
              "Ebs": {
                "AttachTime": "2020-06-21 03:33:53+00:00",
                "DeleteOnTermination": true,
                "Status": "attached",
                "VolumeId": "vol-0ac21224237173afc"
              }
            }
          ],
          "CapacityReservationSpecification": {
            "CapacityReservationPreference": "open"
          },
          "ClientToken": "FE667548-CE95-45A6-8A22-2FDECC9DE838",
          "CpuOptions": {
            "CoreCount": 1,
            "ThreadsPerCore": 1
          },
          "EbsOptimized": false,
          "EnaSupport": true,
          "HibernationOptions": {
            "Configured": false
          },
          "Hypervisor": "xen",
          "ImageId": "ami-0fc61db8544a617ed",
          "InstanceId": "i-08f3abb6471637c66",
          "InstanceType": "t2.micro",
          "KeyName": "publicKey",
          "LaunchTime": "2020-06-21 03:33:52+00:00",
          "MetadataOptions": {
            "HttpEndpoint": "enabled",
            "HttpPutResponseHopLimit": 1,
            "HttpTokens": "optional",
            "State": "applied"
          },
          "Monitoring": {
            "State": "disabled"
          },
          "NetworkInterfaces": [
            {
              "Association": {
                "IpOwnerId": "amazon",
                "PublicDnsName": "ec2-3-222-117-199.compute-1.amazonaws.com",
                "PublicIp": "3.222.117.199"
              },
              "Attachment": {
                "AttachTime": "2020-06-21 03:33:52+00:00",
                "AttachmentId": "eni-attach-0e60c7a14dd18e876",
                "DeleteOnTermination": true,
                "DeviceIndex": 0,
                "Status": "attached"
              },
              "Description": "",
              "Groups": [
                {
                  "GroupId": "sg-08b3e3645d30630ba",
                  "GroupName": "terraform-20200621033347649200000002"
                }
              ],
              "InterfaceType": "interface",
              "Ipv6Addresses": [],
              "MacAddress": "02:a7:da:df:27:fb",
              "NetworkInterfaceId": "eni-0b40a7cf8f5fcd7c3",
              "OwnerId": "732168539940",
              "PrivateDnsName": "ip-10-10-1-100.ec2.internal",
              "PrivateIpAddress": "10.10.1.100",
              "PrivateIpAddresses": [
                {
                  "Association": {
                    "IpOwnerId": "amazon",
                    "PublicDnsName": "ec2-3-222-117-199.compute-1.amazonaws.com",
                    "PublicIp": "3.222.117.199"
                  },
                  "Primary": true,
                  "PrivateDnsName": "ip-10-10-1-100.ec2.internal",
                  "PrivateIpAddress": "10.10.1.100"
                }
              ],
              "SourceDestCheck": true,
              "Status": "in-use",
              "SubnetId": "subnet-06818d8a511df9b3d",
              "VpcId": "vpc-065ea457071dd67bb"
            }
          ],
          "Placement": {
            "AvailabilityZone": "us-east-1a",
            "GroupName": "",
            "Tenancy": "default"
          },
          "PrivateDnsName": "ip-10-10-1-100.ec2.internal",
          "PrivateIpAddress": "10.10.1.100",
          "ProductCodes": [],
          "PublicDnsName": "ec2-3-222-117-199.compute-1.amazonaws.com",
          "PublicIpAddress": "3.222.117.199",
          "RootDeviceName": "/dev/xvda",
          "RootDeviceType": "ebs",
          "SecurityGroups": [
            {
              "GroupId": "sg-08b3e3645d30630ba",
              "GroupName": "terraform-20200621033347649200000002"
            }
          ],
          "SourceDestCheck": true,
          "State": {
            "Code": 16,
            "Name": "running"
          },
          "StateTransitionReason": "",
          "SubnetId": "subnet-06818d8a511df9b3d",
          "Tags": [
            {
              "Key": "Name",
              "Value": "bat"
            }
          ],
          "VirtualizationType": "hvm",
          "VpcId": "vpc-065ea457071dd67bb"
        }
      ],
      "OwnerId": "732168539940",
      "ReservationId": "r-070f311e92c0abcda"
    },
    {
      "Groups": [],
      "Instances": [
        {
          "AmiLaunchIndex": 0,
          "Architecture": "x86_64",
          "BlockDeviceMappings": [
            {
              "DeviceName": "/dev/xvda",
              "Ebs": {
                "AttachTime": "2020-06-21 03:33:53+00:00",
                "DeleteOnTermination": true,
                "Status": "attached",
                "VolumeId": "vol-0626fbb0c02945521"
              }
            }
          ],
          "CapacityReservationSpecification": {
            "CapacityReservationPreference": "open"
          },
          "ClientToken": "8C7DE5A9-7800-4812-BFDC-069ED91E0870",
          "CpuOptions": {
            "CoreCount": 1,
            "ThreadsPerCore": 1
          },
          "EbsOptimized": false,
          "EnaSupport": true,
          "HibernationOptions": {
            "Configured": false
          },
          "Hypervisor": "xen",
          "ImageId": "ami-0fc61db8544a617ed",
          "InstanceId": "i-05e25e43074216229",
          "InstanceType": "t2.micro",
          "KeyName": "publicKey",
          "LaunchTime": "2020-06-21 03:33:52+00:00",
          "MetadataOptions": {
            "HttpEndpoint": "enabled",
            "HttpPutResponseHopLimit": 1,
            "HttpTokens": "optional",
            "State": "applied"
          },
          "Monitoring": {
            "State": "disabled"
          },
          "NetworkInterfaces": [
            {
              "Association": {
                "IpOwnerId": "amazon",
                "PublicDnsName": "ec2-3-80-1-44.compute-1.amazonaws.com",
                "PublicIp": "3.80.1.44"
              },
              "Attachment": {
                "AttachTime": "2020-06-21 03:33:52+00:00",
                "AttachmentId": "eni-attach-055001dd9ce4ad78f",
                "DeleteOnTermination": true,
                "DeviceIndex": 0,
                "Status": "attached"
              },
              "Description": "",
              "Groups": [
                {
                  "GroupId": "sg-04a980b7d3abb3c6f",
                  "GroupName": "terraform-20200621033347944500000003"
                }
              ],
              "InterfaceType": "interface",
              "Ipv6Addresses": [],
              "MacAddress": "02:cc:e1:96:13:4b",
              "NetworkInterfaceId": "eni-0a5a94e62838a2b2c",
              "OwnerId": "732168539940",
              "PrivateDnsName": "ip-10-20-1-100.ec2.internal",
              "PrivateIpAddress": "10.20.1.100",
              "PrivateIpAddresses": [
                {
                  "Association": {
                    "IpOwnerId": "amazon",
                    "PublicDnsName": "ec2-3-80-1-44.compute-1.amazonaws.com",
                    "PublicIp": "3.80.1.44"
                  },
                  "Primary": true,
                  "PrivateDnsName": "ip-10-20-1-100.ec2.internal",
                  "PrivateIpAddress": "10.20.1.100"
                }
              ],
              "SourceDestCheck": true,
              "Status": "in-use",
              "SubnetId": "subnet-0934a46c6eb5542d9",
              "VpcId": "vpc-03ccec9d7758a283a"
            }
          ],
          "Placement": {
            "AvailabilityZone": "us-east-1a",
            "GroupName": "",
            "Tenancy": "default"
          },
          "PrivateDnsName": "ip-10-20-1-100.ec2.internal",
          "PrivateIpAddress": "10.20.1.100",
          "ProductCodes": [],
          "PublicDnsName": "ec2-3-80-1-44.compute-1.amazonaws.com",
          "PublicIpAddress": "3.80.1.44",
          "RootDeviceName": "/dev/xvda",
          "RootDeviceType": "ebs",
          "SecurityGroups": [
            {
              "GroupId": "sg-04a980b7d3abb3c6f",
              "GroupName": "terraform-20200621033347944500000003"
            }
          ],
          "SourceDestCheck": true,
          "State": {
            "Code": 16,
            "Name": "running"
          },
          "StateTransitionReason": "",
          "SubnetId": "subnet-0934a46c6eb5542d9",
          "Tags": [
            {
              "Key": "Name",
              "Value": "bat2"
            }
          ],
          "VirtualizationType": "hvm",
          "VpcId": "vpc-03ccec9d7758a283a"
        }
      ],
      "OwnerId": "732168539940",
      "ReservationId": "r-016fdf4074168bf2d"
    }
  ]
}
