projects/batfish/src/test/resources/org/batfish/representation/aws/test-transit-gateway-peering/aws_configs/accounts/732168539940/us-east-1/TargetGroups.json
{
  "TargetGroups": [
    {
      "HealthCheckEnabled": true,
      "HealthCheckIntervalSeconds": 30,
      "HealthCheckPort": "traffic-port",
      "HealthCheckProtocol": "TCP",
      "HealthCheckTimeoutSeconds": 10,
      "HealthyThresholdCount": 3,
      "LoadBalancerArns": [],
      "Port": 80,
      "Protocol": "TCP",
      "TargetGroupArn": "arn:aws:elasticloadbalancing:us-east-1:732168539940:targetgroup/tf-20200318060720975400000001/2ee8fda3607a7cb9",
      "TargetGroupName": "tf-20200318060720975400000001",
      "TargetType": "instance",
      "UnhealthyThresholdCount": 3,
      "VpcId": "vpc-025fecde0066b174e"
    },
    {
      "HealthCheckEnabled": true,
      "HealthCheckIntervalSeconds": 30,
      "HealthCheckPort": "traffic-port",
      "HealthCheckProtocol": "TCP",
      "HealthCheckTimeoutSeconds": 10,
      "HealthyThresholdCount": 3,
      "LoadBalancerArns": [],
      "Port": 80,
      "Protocol": "TCP",
      "TargetGroupArn": "arn:aws:elasticloadbalancing:us-east-1:732168539940:targetgroup/tf-20200318060723433200000005/0fb008124bcc58f1",
      "TargetGroupName": "tf-20200318060723433200000005",
      "TargetType": "instance",
      "UnhealthyThresholdCount": 3,
      "VpcId": "vpc-01fa57224732323ee"
    },
    {
      "HealthCheckEnabled": true,
      "HealthCheckIntervalSeconds": 30,
      "HealthCheckPort": "traffic-port",
      "HealthCheckProtocol": "TCP",
      "HealthCheckTimeoutSeconds": 10,
      "HealthyThresholdCount": 3,
      "LoadBalancerArns": [],
      "Port": 80,
      "Protocol": "TCP",
      "TargetGroupArn": "arn:aws:elasticloadbalancing:us-east-1:732168539940:targetgroup/tf-20200318063236601600000001/85191eee01283fb1",
      "TargetGroupName": "tf-20200318063236601600000001",
      "TargetType": "instance",
      "UnhealthyThresholdCount": 3,
      "VpcId": "vpc-07dae76a09f634234"
    },
    {
      "HealthCheckEnabled": true,
      "HealthCheckIntervalSeconds": 30,
      "HealthCheckPort": "traffic-port",
      "HealthCheckProtocol": "TCP",
      "HealthCheckTimeoutSeconds": 10,
      "HealthyThresholdCount": 3,
      "LoadBalancerArns": [],
      "Port": 80,
      "Protocol": "TCP",
      "TargetGroupArn": "arn:aws:elasticloadbalancing:us-east-1:732168539940:targetgroup/tf-20200318063249354000000004/0ecb51af6ca8a5f4",
      "TargetGroupName": "tf-20200318063249354000000004",
      "TargetType": "instance",
      "UnhealthyThresholdCount": 3,
      "VpcId": "vpc-0863168f174848aa9"
    },
    {
      "HealthCheckEnabled": true,
      "HealthCheckIntervalSeconds": 30,
      "HealthCheckPort": "traffic-port",
      "HealthCheckProtocol": "TCP",
      "HealthCheckTimeoutSeconds": 10,
      "HealthyThresholdCount": 3,
      "LoadBalancerArns": [],
      "Port": 80,
      "Protocol": "TCP",
      "TargetGroupArn": "arn:aws:elasticloadbalancing:us-east-1:732168539940:targetgroup/tf-20200318073917907400000001/b5373c6223512646",
      "TargetGroupName": "tf-20200318073917907400000001",
      "TargetType": "instance",
      "UnhealthyThresholdCount": 3,
      "VpcId": "vpc-0c05f659386b1cb19"
    },
    {
      "HealthCheckEnabled": true,
      "HealthCheckIntervalSeconds": 30,
      "HealthCheckPort": "traffic-port",
      "HealthCheckProtocol": "TCP",
      "HealthCheckTimeoutSeconds": 10,
      "HealthyThresholdCount": 3,
      "LoadBalancerArns": [],
      "Port": 80,
      "Protocol": "TCP",
      "TargetGroupArn": "arn:aws:elasticloadbalancing:us-east-1:732168539940:targetgroup/tf-20200318073922715300000006/532090e75fbce3c7",
      "TargetGroupName": "tf-20200318073922715300000006",
      "TargetType": "instance",
      "UnhealthyThresholdCount": 3,
      "VpcId": "vpc-07cc19b22cbb0424e"
    }
  ]
}
